--- a/nixpkgs/programs/polybar/bars.ini
+++ b/nixpkgs/programs/polybar/bars.ini
@@ -1,25 +1,84 @@
-[bar/mainbar]
+;=====================================================
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/jaagr/polybar
+;
+;   The README contains alot of information
+;
+;=====================================================
+
+[colors]
+background = #282828
+background-alt = #504945
+foreground = #ebdbb2
+foreground-alt = #ebdbb2
+
+red = #fb4934
+green = #b8bb26
+yellow = #fabd2f
+blue = #83a598
+purple = #d3869b
+aqua = #8ec07c
+orange = #fe8019
+
+[global/wm]
+margin-top = 0
+margin-bottom = 0
+
+[bar/example]
 monitor = ${env:MONITOR:DP-3}
+monitor-fallback = ${env:MONITOR:DP-1}
 width = 100%
-height = 27
+height = 24
+offset-x = 0
+offset-y = 0
 
-background = ${color.bg}
-foreground = ${color.fg}
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-modules-left = cpu
-modules-right = date
+overline-size = 2
+underline-size = 2
+
+border-bottom = 0
+border-bottom-color = #333
+
+spacing = 1
+padding-left = 0
+padding-right = 2
+module-margin-left = 1
+module-margin-right = 2
+
+font-0 = Hasklig:pixelsize=9;0
+font-1 = Font Awesome 5 Free-Regular-400:size=6;-1
+
+modules-left = xmonad
+modules-center =
+modules-right = cpu  date
+
+tray-position = right
+tray-padding = 2
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = ${colors.red}
+label = %percentage%%
 
 [module/date]
 type = internal/date
+interval = 1
 
-interval = 1.0
-date = %Y%m%d%
-time = %H:%M
+date = " %b %d"
+date-alt = " %Y-%m-%d"
 
-format = 🕓 <label>
-label = %date%::%time%
-[module/cpu]
-type = internal/cpu
+time = "%H:%M:%S"
+time-alt = "%H:%M:%S"
 
-interval = 0.5
+format-prefix = ""
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = ${colors.aqua}
 
+label = %date% %time%
+
+; vim:ft=dosini
